add firebase create tasks data manually, manage that data on add and delete

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "odin to do llist",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "webpack-cli": "^5.1.0"
   },
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "firebase": "^9.23.0"
   }
 }
